<resources>
    <string name="app_name">Casangel</string>

    <string name="wait">Wait…</string>
    <string name="string_msg_email_invalid">This email is not valid.</string>

    <string name="take_picture">Picture Taken</string>
    <string name="msg_instruction">Take a picture or choose an image from the gallery, then start designing your own
        space
    </string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="msg_instruction2">Choose an object from the gallery and place it in your space, modify the size and press
    </string>
    <string name="no_internet"> Internet Connection is not Available </string>
    <string name="retry"> Retry </string>
    <string name="permission_denied">Your requesting permission was denied.</string>

    <string name="invalid_first_name"> Invalid First Name </string>
    <string name="invalid_last_name"> Invalid Last Name </string>
    <string name="invalid_email"> Invalid Email Address </string>
    <string name="invalid_password"> Invalid Password </string>
    <string name="invalid_name"> Invalid Name </string>
    <string name="invalid_address"> Invalid Address </string>
    <string name="invalid_company"> Invalid Company </string>
    <string name="invalid_contact"> Invalid Contact No. </string>
    <string name="invalid_username">Invalid username</string>
    <string name="required_field">Required field</string>
    <string name="invalid_phone_no">Invalid phone number</string>
    <string name="phone">Phone</string>
    <string name="state">State</string>

    <string name="unexpected_response"> Unexpected Server Response </string>
    <string name="coupon"> Coupon </string>
    <string name="coupon_code"> Coupon Code </string>
    <string name="coupon_amount"> Coupon Amount </string>
    <string name="coupon_discount"> Coupon Discount </string>
    <string name="coupon_type"> Coupon Type </string>
    <string name="sample_coupons"> Sample Coupon Codes </string>
    <string name="payment_method"> Payment Method </string>
    <string name="billing_address"> Billing Address </string>
    <string name="shipping_address"> Shipping Address </string>
    <string name="shipping_method"> Shipping Method </string>
    <string name="add_coupon"> Add Coupon? </string>
    <string name="coupon_removes_other_coupons"> This coupon may remove all other coupons! </string>
    <string name="ok"> OK </string>
    <string name="cancel"> Cancel </string>

    <!--  Coupon Error Strings -->
    <string name="invalid_coupon"> Invalid Coupon </string>
    <string name="coupon_expired"> Coupon is expired! </string>
    <string name="coupon_applied"> Coupon already applied! </string>
    <string name="coupon_cannot_be_applied"> Coupon cannot be applied! </string>
    <string name="coupon_used_by_you"> You have already used this Coupon! </string>
    <string name="coupon_used_by_all"> Coupon has been used by limited users! </string>
    <string name="coupon_is_not_for_you"> You are not applicable to use this Coupon! </string>
    <string name="coupon_cannot_used_with_existing"> Coupon cannot be used with existing Coupon! </string>
    <string name="coupon_is_not_for_sale_items"> Coupon cannot be used on sale items! </string>
    <string name="coupon_is_not_for_too_many_products"> Coupon cannot be used on too many products! </string>
    <string name="coupon_is_not_for_these_products"> Coupon is not valid for these products! </string>
    <string name="coupon_is_not_for_these_categories"> Coupon is not valid for these category of products! </string>
    <string name="coupon_is_not_for_excluded_products"> Coupon cannot be used on excluded products! </string>
    <string name="coupon_is_not_for_excluded_categories"> Coupon cannot be used on excluded categories! </string>
    <string name="coupon_max_amount_is_less_than_order_total"> Cart total does not meet the maximum amount for Coupon! </string>
    <string name="coupon_min_amount_is_greater_than_order_total"> Cart total does not meet the minimum amount for Coupon! </string>

    <string name="total"> Total </string>
    <string name="record_not_found"> No Record Found </string>

    <string name="order_id"> Order ID </string>
    <string name="order_status"> Order Status </string>
    <string name="order_date"> Order Date </string>
    <string name="order_details"> Order Details </string>
    <string name="order_confirmed"> Order Confirmed </string>
    <string name="order_notes"> Order Notes </string>
    <string name="cancel_order"> Cancel Order </string>
    <string name="no_of_products"> No. of Products </string>

    <string name="checkout_price"> Checkout Price </string>
    <string name="view_detail">View Detail</string>
    <string name="total_price"> Total Price </string>

    <string name="full_name"> Full Name </string>
    <string name="city"> City </string>
    <string name="address"> Address </string>
    <string name="products"> Products </string>
    <string name="subtotal"> Subtotal </string>
    <string name="tax"> Tax </string>
    <string name="shipping"> Shipping </string>
    <string name="discount"> Discount </string>
    <string name="choose_option"> Choose Option </string>

    <string name="product_title"> Product Title </string>
    <string name="category"> Category </string>
    <string name="product_price"> Product Price </string>
    <string name="search">Search</string>
    <string name="search_product_by_name"> Type Something to Search </string>

    <string name="email_address"> Email Address </string>
    <string name="save"> Save </string>
    <string name="send"> Send </string>
    <string name="forgot_your_password"> Forgot Your Password? </string>
    <string name="my_account">My account</string>
    <string name="instructions">Instructions</string>
    <string name="checkout">Checkout</string>
    <string name="create_your_space">Create your space</string>
    <string name="templates">TEMPLATES</string>
    <string name="my_creations">My creations</string>
    <string name="inspirate">INSPIRATE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_a_member">not a member?</string>
    <string name="signup">Signup</string>
    <string name="order_info">Order information</string>
    <string name="quick_create">Quick Create</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="identification_number">Identification number</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="store">STORE</string>
    <string name="trends">Trends</string>
    <string name="final_purchase">Final Purchase</string>
    <string name="loading">Loading…</string>
    <string name="my_orders">My orders</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="home">HOME</string>
    <string name="creations">CREATIONS</string>
    <string name="ideas">IDEAS</string>
    <string name="account">ACCOUNT</string>
    <string name="thank_you">Thank you!</string>
    <string name="thank_for_shopping">Thank you for shopping with us!</string>
    <string name="add_cart">Add to cart</string>
    <string name="add_more_products">Add more products</string>
    <string name="cart_empty">Cart is empty</string>
    <string name="coution">Caution</string>
    <string name="msg_delete_project">Will you delete this project?</string>
    <string name="msg_add_to_cart">Product added</string>
    <string name="apply">Apply</string>
    <string name="just_a_moment">Just a moment…</string>

    <string name="ahead">Ahead</string>
    <string name="behind">Behind</string>
    <string name="save_your_project">Save your project</string>
    <string name="input_name">Input name</string>
    <string name="type_space_name">Type your space name</string>
    <string name="save_space_success">Your space was saved successfully</string>
    <string name="select_items">Please select your items</string>
    <string name="saving">Saving...</string>
</resources>
