<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/dialog_input"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/light_gray"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_email"
            android:padding="5dp"
            android:background="@drawable/rounded_corners_edittext_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <Button
            android:id="@+id/dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_gravity="end"
            android:background="@drawable/rounded_corners_button_accent" />

    </LinearLayout>
</LinearLayout>